feat: unified profile directory and fixed JVM GC multi-selection conflict (v1.1.5-alpha)